# local-rag

./: .gitignore  OKF.md  README.md  findings.md  instructions.md  issues-resolutions.md  mainIdea.md  progress.md  pyproject.toml  sec2-gh-repo.md  sec3-personal-memory.md  sec4-newsletter.md  sec5-smart-spotloght.md  task_plan.md
src/local_rag/: __init__.py  __main__.py  cli.py  config.py  digest.py  extract.py  ingest.py  memory.py  metadata.py  models.py  query.py  spotlight.py  store.py  web.py
src/local_rag/templates/: base.html  digest.html  digest_daily.html  index.html  memories.html  spotlight.html  status.html
